--- a/environment.yaml
+++ b/environment.yaml
@@ -126,32 +126,55 @@ dependencies:
   - zstd=1.5.5=hd43e919_0
   - pip:
       - absl-py==2.1.0
+      - accelerate==0.18.0
+      - agilerl==0.1.24
+      - antlr4-python3-runtime==4.9.3
+      - appdirs==1.4.4
       - astunparse==1.6.3
+      - async-timeout==4.0.3
       - black==23.12.1
       - cachetools==5.3.2
       - certifi==2023.11.17
+      - cfgv==3.4.0
       - charset-normalizer==3.3.2
       - click==8.1.7
       - cloudpickle==3.0.0
       - codespell==2.2.6
       - contourpy==1.2.0
       - cycler==0.12.1
+      - dill==0.3.8
+      - distlib==0.3.8
       - dm-tree==0.1.8
+      - docker-pycreds==0.4.0
       - farama-notifications==0.0.4
+      - fastrand==1.8.0
       - filelock==3.13.1
       - flatbuffers==23.5.26
+      - flatten-dict==0.4.2
       - fonttools==4.47.2
       - fsspec==2023.12.2
       - gast==0.5.4
+      - gitdb==4.0.11
+      - gitpython==3.1.43
+      - google-api-core==2.18.0
       - google-auth==2.26.2
       - google-auth-oauthlib==1.2.0
+      - google-cloud-core==2.4.1
+      - google-cloud-storage==2.16.0
+      - google-crc32c==1.5.0
       - google-pasta==0.2.0
+      - google-resumable-media==2.7.0
+      - googleapis-common-protos==1.63.0
       - grpcio==1.60.0
-      - gymnasium==0.29.1
+      - gymnasium==0.28.1
       - h5py==3.10.0
+      - huggingface-hub==0.22.2
+      - hydra-core==1.3.2
+      - identify==2.5.35
       - idna==3.6
       - imageio==2.33.1
       - isort==5.13.2
+      - jax-jumpy==1.0.0
       - joblib==1.3.2
       - keras==3.0.5
       - kiwisolver==1.4.5
@@ -162,32 +185,47 @@ dependencies:
       - mat4py==0.6.0
       - matplotlib==3.8.2
       - mdurl==0.1.2
+      - minari==0.4.3
       - ml-dtypes==0.2.0
       - mpmath==1.3.0
       - mypy-extensions==1.0.0
       - namex==0.0.7
       - networkx==3.2.1
+      - nodeenv==1.8.0
       - numpy==1.26.3
       - oauthlib==3.2.2
+      - omegaconf==2.3.0
       - opt-einsum==3.3.0
       - packaging==23.2
       - pandas==2.1.4
       - pathspec==0.12.1
+      - pathtools==0.1.2
       - pettingzoo==1.24.3
       - pillow==10.2.0
       - platformdirs==4.1.0
+      - portion==2.4.2
+      - pre-commit==3.7.0
+      - proto-plus==1.23.0
       - protobuf==4.23.4
       - pyasn1==0.5.1
       - pyasn1-modules==0.3.0
       - pydot==2.0.0
       - pygame==2.5.2
       - pyparsing==3.1.1
+      - redis==4.6.0
+      - regex==2023.12.25
       - requests-oauthlib==1.3.1
       - rich==13.7.0
       - rsa==4.9
+      - safetensors==0.4.2
       - scikit-learn==1.4.0
       - scipy==1.12.0
+      - sentry-sdk==1.44.1
+      - setproctitle==1.3.3
+      - shellingham==1.5.4
       - simpy==4.1.1
+      - smmap==5.0.1
+      - sortedcontainers==2.4.0
       - stable-baselines3==2.2.1
       - supersuit==3.9.2
       - sympy==1.12
@@ -197,12 +235,17 @@ dependencies:
       - tensorflow-estimator==2.15.0
       - tensorflow-intel==2.15.0
       - tensorflow-io-gcs-filesystem==0.31.0
-      - termcolor==2.4.0
+      - termcolor==1.1.0
       - threadpoolctl==3.2.0
       - tinyscaler==1.2.7
+      - tokenizers==0.15.2
       - torch==2.1.2
       - tqdm==4.66.2
+      - transformers==4.39.3
+      - typer==0.12.1
       - tzdata==2023.4
+      - virtualenv==20.25.1
+      - wandb==0.13.11
       - werkzeug==3.0.1
       - wrapt==1.14.1
 prefix: C:\Users\asahu\AppData\Local\anaconda3\envs\rlfdi
